[gd_scene load_steps=6 format=3 uid="uid://bwv3s62w20ivm"]

[ext_resource type="Script" path="res://Faction_Regiment.gd" id="1_nqapm"]
[ext_resource type="Texture2D" uid="uid://cftc6r08dnci6" path="res://grfx/iconDarkGrey32.png" id="2_2qplr"]
[ext_resource type="PackedScene" uid="uid://sf58apyyihsn" path="res://hitbox_regiment_bounds.tscn" id="2_daj36"]
[ext_resource type="Script" path="res://faction_icon.gd" id="2_nebew"]
[ext_resource type="PackedScene" uid="uid://3mie7hp7sxd" path="res://hitbox_rotation.tscn" id="3_3dvq2"]

[node name="Faction_Regiment_Scene" type="Node2D"]
script = ExtResource("1_nqapm")

[node name="hitbox_regiment_bounds" parent="." instance=ExtResource("2_daj36")]

[node name="hitbox_rotation" parent="." instance=ExtResource("3_3dvq2")]

[node name="bounds_sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_2qplr")
script = ExtResource("2_nebew")

[connection signal="input_event" from="hitbox_regiment_bounds" to="." method="_on_hitbox_regiment_bounds_input_event"]
[connection signal="input_event" from="hitbox_rotation" to="." method="_on_hitbox_rotation_input_event"]
